2007-12-12  Stefan Kost  <ensonic@users.sf.net>

	* gst/gstutils.c:
	  Add mising "Since:" to docs.

2007-12-11  Stefan Kost  <ensonic@users.sf.net>

	* gst/gstplugin.c:
	  Include "glib-compat-private.h" to fix the build on system with
	  glib < 2.10. Fixes #503131.

2007-12-11  Stefan Kost  <ensonic@users.sf.net>

	* gst/gstutils.c:
	* gst/gstutils.h:
	  Actually its not PURE as it gets the time from elsewhere.

2007-12-11  Stefan Kost  <ensonic@users.sf.net>

	* docs/gst/gstreamer-sections.txt:
	* gst/gstclock.h:
	* gst/gstdebugutils.c:
	* gst/gstinfo.c:
	* gst/gstutils.c:
	* gst/gstutils.h:
	* libs/gst/base/gstbasesink.c:
	* tools/gst-launch.c:
	  Change GST_GET_TIMESTAMP into gst_util_get_timestamp and replace all
	  uses as we don't have HAVE_POSIX_TIMERS in public headers.
	  Thanks Tim for spotting.

2007-12-09  Sebastian Dröge  <slomo@circular-chaos.org>

	* configure.ac:
	  Don't define GST_DISABLE_DEPRECATED for releases. Fixes #498181.

2007-12-08  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/gststructure.c: (gst_structure_validate_name),
	  (gst_structure_new_valist), (gst_structure_parse_value),
	  (gst_structure_from_string):
	  Don't crash in _from_string() if the structure name is not valid
	  (fixes #501560).  Allow structure names to start with a number
	  again (this apparently broke the ubuntu codec installer).

	* tests/check/gst/gststructure.c: (GST_START_TEST), (GST_START_TEST),
	  (GST_START_TEST):
	  Add unit test for the crash; update unit tests for new behaviour.

2007-12-03  Wim Taymans  <wim.taymans@gmail.com>

	* gst/gstutils.c:
	Clarify gst_element_get_compatible_pad() documentation.
	Fixes #500919.

2007-12-02  Sebastian Dröge  <slomo@circular-chaos.org>

	* tests/check/Makefile.am:
	  Don't forget to dist {gst,libs}/struct_hppa.h.

2007-11-28  Stefan Kost  <ensonic@users.sf.net>

	* libs/gst/base/gstbasesink.c:
	  Use new API to get elapsed time.

2007-11-28  Stefan Kost  <ensonic@users.sf.net>

	* gst/gstdebugutils.c: